--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "node": "6.9.1"
   },
   "scripts": {
-    "start": "node ./bin/www"
+    "dev": "nodemon app.js",
+    "start": "nodemon app.js"
   },
   "dependencies": {
     "body-parser": "^1.9.0",
@@ -22,11 +23,9 @@
     "express": "^4.9.5",
     "express-session": "^1.8.2",
     "jade": "~1.11.0",
-    "morgan": "^1.3.2",
-    "passport": "^0.2.1",
-    "passport-auth0": "^0.5.2",
     "serve-favicon": "~2.3.0",
     "JSONStream": "latest",
+    "get-json": "^0.0.3",
     "bcryptjs": "^0.7.12",
     "express-handlebars": "^1.1.0",
     "grunt": "^1.0.1",
@@ -37,25 +36,11 @@
     "grunt-remove": "^0.1.0",
     "jquery": "latest",
     "lodash": "^4.17.4",
-    "lodash.groupby": "^4.6.0",
-    "lodash.omitby": "^4.6.0",
-    "lodash.sumby": "^4.6.0",
-    "lodash.uniq": "^4.5.0",
-    "lodash.uniqby": "^4.7.0",
     "method-override": "^2.2.0",
     "mongo-querystring": "^4.1.0",
-    "mongodb": "^2.2.21",
     "nodemon": "^1.9.2",
     "orchestrate": "^0.3.11",
-    "passport-facebook": "^1.0.3",
-    "passport-google": "^0.3.0",
-    "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.2",
-    "plaid": "latest",
     "q": "^1.0.1",
     "whatwg-fetch": "^2.0.2"
-  },
-  "devDependencies": {
-    "supertest": "^3.0.0"
   }
 }
