--- a/package.json
+++ b/package.json
@@ -14,26 +14,25 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "JSONStream": "latest",
+    "bcryptjs": "^0.7.12",
     "body-parser": "^1.9.0",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.3.3",
-    "ejs": "^2.4.2",
     "debug": "~2.2.0",
     "dotenv": "^1.2.0",
+    "ejs": "^2.4.2",
     "express": "^4.9.5",
-    "express-session": "^1.8.2",
-    "jade": "~1.11.0",
-    "serve-favicon": "~2.3.0",
-    "JSONStream": "latest",
-    "get-json": "^0.0.3",
-    "bcryptjs": "^0.7.12",
     "express-handlebars": "^1.1.0",
+    "express-session": "^1.8.2",
+    "get-json": "^0.0.3",
     "grunt": "^1.0.1",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-stylus": "^0.20.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-remove": "^0.1.0",
+    "jade": "~1.11.0",
     "jquery": "latest",
     "lodash": "^4.17.4",
     "method-override": "^2.2.0",
@@ -41,6 +40,8 @@
     "nodemon": "^1.9.2",
     "orchestrate": "^0.3.11",
     "q": "^1.0.1",
+    "random-zipcode": "^1.0.2",
+    "serve-favicon": "~2.3.0",
     "whatwg-fetch": "^2.0.2"
   }
 }
