--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "JSONStream": "latest",
     "bcryptjs": "^0.7.12",
     "body-parser": "^1.9.0",
+    "clipboard": "^1.6.1",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.3.3",
     "debug": "~2.2.0",
