--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Am I Represented?",
+  "name": "amirepresented",
   "version": "1.0.0",
   "description": "A web app to help you find your elected representatives.",
   "repository": "https://github.com/jeremypbeasley/amirepresented.git",
